# tauri-zknotes

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  rustfmt.toml
tauri/: flake.nix  my-tauri-mobile.nix  my-tauri.nix
tauri/src-tauri/: Cargo.toml  androidarmv7.sh  build-elm.sh  debugrun.sh  elm-tauri-watch-build.sh  postgen.sh  releaserun.sh  tauri-dev.toml  tauri.conf.json  zknotes-tauri-dev.toml
tauri/src-tauri/capabilities/: default.json  main.json
tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
tauri/src-tauri/static/: index.html  localvals.js  taselection.js  windowkey.js
