[package]
name = "zknotes-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.1", features = ["rustls-tls"] }
tokio = "1.35.0"
actix-rt = "2.9.0"
uuid = { version = "1.7", features = ["serde", "v4", "fast-rng"] }


zknotes-server-lib = { path = "../../zknotes/server-lib" }
time = { version = "0.3.36", features = ["formatting"] }
