[package]
name = "zknotes-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.4", features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
tokio = "1.43.0"
actix-rt = "2.10.0"
uuid = { version = "1.13", features = ["serde", "v4", "fast-rng"] }
log = "0.4.25"
zknotes-server-lib = { path = "../../zknotes/server-lib" }
time = { version = "0.3.37", features = ["formatting"] }
girlboss = {version = "1.0.0-alpha.4", features = ["actix-rt"] }
elm_rs = "0.2.2"
